Refactor review controller and update Swagger documentation for reviews (wip)
